# note-book

./: .pre-commit-config.yaml  404.html  Makefile  README.md  deploy.html  gh-pages.html  index.html  markdown-cheatsheet.html  mkdocs.yml  old-mkdocs.yml  pyproject.toml  sitemap.xml  structure.html  structure.md  sync-notes.sh  syncnotes.py
.github/workflows/: deploy.yml  gh-pages.yml
Demo-jobs/: index.html
Timeline/: index.html
assets/: index.html  meeting-transcriptHIOUSA.html
classes/: index.html
classes/Freelance/: nathens-call-5925.html
docs/: .note-strategy.md.swp  index.md  note-strategy.md.save  structure.md
docs/ASAP-Avionics/: ASAP_Avionics_Meeting_Notes.md
docs/Demo-jobs/: README.md
docs/Timeline/: README.md
docs/assets/: README.md
docs/classes/: README.md
docs/daily/: 5-16-25_ToDo.md
docs/ideas/: README.md
docs/jobs/: README.md
docs/projects/: README.md  css-relative-units.md  css-relitive-units.md  robot-face.md
docs/references/: CSS-resources.md  README.md  helpfull-scripts.md  usfull-docs.md
docs/web-design/: Example-Design-Project.md  README.md  UI-Design.md  adobe-phonts-hack.md
ideas/: index.html
jobs/: index.html
jobs/Hole-In-One/: Amy-Fanter.html  (+14 more)
projects/: css-relative-units.html  css-relitive-units.html  index.html  robot-face.html
references/: CSS-resources.html  GoHighLevel.html  helpfull-scripts.html  helpfull-scripts.md.save  index.html  usfull-docs.html
search/: search_index.json
templates/: daily.md
web-design/: Example-Design-Project.html  UI-Design.html  adobe-phonts-hack.html  index.html
(+99 files in other folders)
