[project]
name = "note-book"
version = "0.1.0"
description = "Personal digital garden built with MkDocs"
authors = [
    {name = "Tristan Thomas", email = "tristanedu@protonmail.com"},
]
dependencies = [
    "mkdocs",
    "proselint",
    "gitdb2",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-material",
    "mkdocs-section-index",
    "pymdown-extensions",
    "mkdocs-newsletter",
    "mkdocs-autolinks-plugin>=0.5.0",
    "mkdocs-exclude-search>=0.6.4",
]
requires-python = ">=3.9"
license = {text = "CC0-1.0"}

[project.urls]
Homepage = "https://tristanedu.github.io/note-book/"

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
